# time-serie-explo

./: .dockerignore  .env.example  .gitignore  ANALYSE_SECURITE_MONITORING.md  ARCHITECTURE.md  CHECKLIST_LANCEMENT.md  DEPLOYMENT.md  Dockerfile  LICENSE  PLAN_HYDRO_EXPLORER.md  README.md  REPONSE_LANCEMENT.md  SETUP.bat  backend_debug.txt  check_gpu.py  deploy.py  dev_backend.bat  docker-compose.cuda.yml  docker-compose.xpu.yml  docker-compose.yml  load_model_isolated.py  main.py  mlflow.db  pyproject.toml  requirements.txt  run_app.py  setup.sh  setup_env.py  start.bat  test_darts_method.py  test_loader.py  uv.cpu.toml  uv.cuda.toml  uv.xpu.toml  verify_installation.py
.streamlit/: config.toml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat  bottle.py  numba
api/: cache.py  config.py  database.py  json_response.py  main.py  serializers.py  task_manager.py
api/routers/: counterfactual.py  datasets.py  db_introspection.py  explainability.py  forecasting.py  latent_space.py  models.py  pumping_detection.py  training.py
api/schemas/: cluster_profiling.py  counterfactual.py  datasets.py  explainability.py  forecasting.py  latent_space.py  models.py  pumping_detection.py  training.py
backend/: .env.example  logging_setup.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: websockets.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: datasets.py  forecasting.py  models.py  sources.py  training.py
backend/app/api/ws/: __init__.py  training_progress.py
backend/app/schemas/: __init__.py  dataset.py  model.py  source.py  training.py
backend/app/workers/: celery_app.py  training_tasks.py
configs/: linearModel.json  patchMixer.json  patchTST.json
core/: callbacks.py  dataset_registry.py  model_config.py  model_factory.py  model_registry.py  robust_loader.py  statistics.py  training.py
dashboard/: README_APPS.md  README_dashboard.md  __init__.py  app.py  config.py  models_config.py
dashboard/.streamlit/: config_explorer.toml  config_training.toml
dashboard/components/: __init__.py  export_button.py  live_log.py  training_monitor_ui.py
dashboard/components/cards/: __init__.py  metrics.py
dashboard/components/charts/: __init__.py  explainability.py  forecast.py
dashboard/components/sidebar/: __init__.py  export_section.py  model_selector.py
dashboard/pages/: 1_📊_Data_Explorer.py  2_📈_Statistical_Analysis.py  3_🔗_Correlations.py  4_🎯_Train_Models.py  5_🔮_Forecasting.py  6_📉_Model_Comparison.py  7_🔄_Backtesting.py  8_💡_Explainability.py
dashboard/training/: Home.py  __init__.py  app.py
dashboard/training/pages/: 0_Dataset_Preparation.py  1_Database_Import.py  1_Dataset_Preparation.py  1_Train_Models.py  1_🎯_Train_Models.py  2_Dataset_Preparation.py  2_Forecasting.py  2_Train_Models.py  2_🔮_Forecasting.py  3_Forecasting.py  3_📉_Model_Comparison.py  3_🔍_TimeSHAP.py  4_Counterfactual_Analysis.py  4_Forecasting.py
dashboard/utils/: __init__.py  callbacks.py  cluster_profiling.py  custom_wrappers.py  data_loader.py  dataset_registry.py  db_presets.json  explainability.py  export.py  forecasting.py  latent_space.py  mlflow_client.py  model_config.py  model_factory.py  model_loader_fix.py  model_registry.py  optuna_training.py  optuna_utils.py  plots.py  postgres_connector.py  preprocessing.py  robust_loader.py  simple_loader.py  standalone_loader.py  state.py  statistics.py  streamlit_safe_loader.py  timeshap_compat.py  timeshap_wrapper.py  torch_loader.py  training.py  training_monitor.py  xpu_support.py
data/piezos/: piezotest.csv
docker/: Dockerfile  Dockerfile.backend  Dockerfile.frontend
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docs/: PLAN_API.md  RAPPORT_PIPELINE_ENTRAINEMENT.md  SEGMENTATION_PERFORMANCE_EXPLICABILITE.md
docs/plans/: 2026-03-09-full-web-migration-design.md  2026-03-09-full-web-migration.md  2026-03-10-counterfactual-refonte.md  2026-03-10-latent-space-design.md
e2e/: package.json  playwright.config.ts
e2e/tests/: full-workflow.spec.ts
exp/: exp_main.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  plotly.d.ts  routes.tsx
frontend/src/lib/: api.ts  (+3 more)
layers/: PatchTST_backbone.py
lightning_logs/version_0/: events.out.tfevents.1770211923.BOOK-J232JJB5SS.8936.0
models/: DLinear.py
nginx/: nginx.conf  observatory-bridge.js
notebooks/: 1_data_analysis_darts.ipynb  1_train_baselines.ipynb  2_explain_model.ipynb  3_darts_advanced_forecasting.ipynb
requirements/: base.txt  cpu.txt  cuda.txt  xpu.txt
scripts/: migrate_models.py  reset_mlflow_db.ps1  verify_before_test.py  verify_before_test.sh
tests/: conftest.py  test_api_counterfactual.py  test_api_datasets.py  test_api_explainability.py  test_api_forecasting.py  test_api_health.py  test_api_models.py  test_api_training.py  test_pastas_validation.py  test_schemas.py  test_serializers.py  test_task_manager.py
tests/latent_space/: test_cluster_profiling.py  test_utils.py
tests/pumping_detection/: test_bnpe_client.py  test_changepoint.py  test_clean_period.py  test_fusion.py  test_ml_layer.py  test_pastas_layer.py  test_pipeline.py  test_xai_layer.py
(+116 files in other folders)
